<resources>
    <string name="app_name">VDCCalculatorV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Votre_Voiture">Votre Voiture</string>
    <string name="menu_Consomation">Consomation</string>
    <string name="menu_Entretien">Entretien</string>
    <string name="btCalculer">Calculer</string>
    <string name="poids_total">Poids Total</string>
    <string name="kw">KW</string>
    <string name="gazCarbon">Gaz Carbon</string>
    <string name="menu_Plaques">Plaques</string>
    <string name="menu_Assurance">Entretien</string>
    <string name="menu_CoutTotal">Entretien</string>
    <string name="menu_Assurances">Assurance</string>
    <string name="menu_Consomations">Consomation</string>
    <string name="menu_CoutTotaux">Cout Total</string>
</resources>