<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/Votre_Voiture">

    <fragment
        android:id="@+id/Votre_Voiture"
        android:name="com.example.vdccalculatorv2.ui.home.HomeFragment"
        android:label="@string/menu_Votre_Voiture"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/Consomation"
        android:name="com.example.vdccalculatorv2.ui.gallery.GalleryFragment"
        android:label="@string/menu_Consomation"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/Entretien"
        android:name="com.example.vdccalculatorv2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Entretien"
        tools:layout="@layout/fragment_slideshow" />
</navigation>